bpo-35021: Fix assertion failures in _datetimemodule.c.

The result of multiplication and division of an integer and
an instane of integer subclass can be not exact integer.
The type of the right operand takes precedence when it is
a subclass of the type of the left operand.
Use PyLong slots explicitly to get an exact integer.